--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
     name: randmeth-campaigns
-  cloud:
-    config:
-      uri: http://localhost:8061
+#  cloud:
+#    config:
+#      uri: http://localhost:8061
